chore: integrated  formatter
